Added Gurobi support
However unsure if these environment variables should ideally go here ...

--- a/config/plan4res.conf
+++ b/config/plan4res.conf
@@ -27,15 +27,15 @@ P4R_EXECUTOR=singularity
 P4R_SINGULARITY_IMAGE_RELEASE="master"
 #P4R_SINGULARITY_IMAGE_RELEASE="devel"
 # avoid updating the image if possible
-#P4R_SINGULARITY_IMAGE_PRESERVE=1
-P4R_SINGULARITY_IMAGE_PRESERVE=${P4R_SINGULARITY_IMAGE_PRESERVE:-0}
+P4R_SINGULARITY_IMAGE_PRESERVE=1
+#P4R_SINGULARITY_IMAGE_PRESERVE=0
 # If you want to use your locally-built image
-#P4R_USE_LOCAL_IMAGE=1
-P4R_USE_LOCAL_IMAGE=${P4R_USE_LOCAL_IMAGE:-0}
+P4R_USE_LOCAL_IMAGE=1
+#P4R_USE_LOCAL_IMAGE=${P4R_USE_LOCAL_IMAGE:-0}
 # Cache the sandbox image for Linux only rootless Singularity installation, default is 0
 #P4R_CACHE_SANDBOX=1
 # MPI implementation: MPICH (default) or OpenMPI
-P4R_MPI_IMP=${P4R_MPI_IMP:-"MPICH"}
+P4R_MPI_IMP=${P4R_MPI_IMP:-"OpenMPI"}
 # Plan4res stored container name
 P4R_CONTAINER_NAME="plan4res_${P4R_MPI_IMP}"
 
@@ -117,6 +117,27 @@ fi
 
 # Temporary directory for building image
 BUILDDIR=${PWD}/build_image
+
+########################################
+#### Section 4: Gurobi Related stuff
+####
+if [ -d ${ADDONS_INSTALLDIR}/gurobi ] ; then
+  echo "Some trace of Gurobi found"
+  for file in ${ADDONS_INSTALLDIR}/gurobi/*/ ; do 
+    if [[ -d "$file" && ! -L "$file" ]]; then
+      grb="${file%/}" 
+      grb="${grb##*/}"
+      #echo "$file is a directory"; 
+    fi; 
+  done
+  echo "Version $grb of Gurobi identified. Setting environment variables"
+  GUROBI_HOME=${ADDONS_INSTALLDIR}/gurobi/$grb/linux64
+if [ -f ${ADDONS_INSTALLDIR}/gurobi/gurobi.lic ] ; then
+  GRB_LICENSE_FILE=${ADDONS_INSTALLDIR}/gurobi/gurobi.lic
+fi
+  PATH="${PATH}:${GUROBI_HOME}/bin"
+  LD_LIBRARY_PATH="${LD_LIBRARY_PATH}:${GUROBI_HOME}/lib"
+fi
 
 ###########################################################################
 # stop exporting all variables
