--- a/config/plan4res.conf
+++ b/config/plan4res.conf
@@ -27,11 +27,11 @@ P4R_EXECUTOR=singularity
 P4R_SINGULARITY_IMAGE_RELEASE="master"
 #P4R_SINGULARITY_IMAGE_RELEASE="devel"
 # avoid updating the image if possible
-P4R_SINGULARITY_IMAGE_PRESERVE=1
-#P4R_SINGULARITY_IMAGE_PRESERVE=0
+#P4R_SINGULARITY_IMAGE_PRESERVE=1
+P4R_SINGULARITY_IMAGE_PRESERVE=0
 # If you want to use your locally-built image
-P4R_USE_LOCAL_IMAGE=1
-#P4R_USE_LOCAL_IMAGE=${P4R_USE_LOCAL_IMAGE:-0}
+#P4R_USE_LOCAL_IMAGE=1
+P4R_USE_LOCAL_IMAGE=${P4R_USE_LOCAL_IMAGE:-0}
 # Cache the sandbox image for Linux only rootless Singularity installation, default is 0
 #P4R_CACHE_SANDBOX=1
 # MPI implementation: MPICH (default) or OpenMPI
